# wot-project-part14-Sensor_Tile-Grassi-Massari-Santantonio

./: .gitignore  README.md  Spiegazione.md
cli/: CMakeLists.txt  README.md
cli/include/: ArgParser.h  DataWriter.h  SensorDevice.h  SystemUtils.h
cli/lib/libhs_datalog/: HS_DataLog.h
cli/src/: DataWriter.cpp  SensorDevice.cpp  SystemUtils.cpp  main.cpp
